# ycm-cmake-modules

./: .appveyor.yml  .gitattributes  .gitignore  .mailmap  .travis.yml  CHANGELOG.md  CMakeLists.txt  Copyright.txt  README.md  YCMConfig.cmake.in  appveyor.yml  index.html
.github/: CODEOWNERS  weekly-digest.yml
.github/workflows/: conda-forge-ci.yml  generate-gh-pages.yml  nightly-merge.yml  python.yml  rebase-pr.yml  release.yml
.reuse/: dep5
build-modules/: BuildComanSimulator.cmake  BuildECM.cmake  BuildEigen3.cmake  BuildGazeboYARPPlugins.cmake  BuildGooCanvas.cmake  BuildGooCanvasMM.cmake  BuildGtkDatabox.cmake  BuildGtkDataboxMM.cmake  BuildICUB.cmake  BuildTemplateExe.cmake  BuildTemplateLib.cmake  BuildTemplatePkg.cmake  BuildTemplateRf.cmake  BuildTinyXML.cmake  BuildYARP.cmake  Buildfakebot.cmake  BuildqpOASES.cmake  CMakeLists.txt
cmake-next/: CMakeLists.txt  README
cmake-next/Modules/: CMakeParseArguments.cmake  ExternalProject.cmake  FindPkgConfig.cmake
cmake-next/proposed/: ExternalProject.cmake  FindGLEW.cmake
cmake-next/v3.1.3/: FindPkgConfig.cmake
cmake-next/v3.14.4/: UseSWIG.cmake
deprecated/: CMakeLists.txt  FindGLUT.cmake  FindGthread.cmake  FindGtkMM.cmake  FindGtkMMUnix.cmake  FindGtkMMWin32.cmake  FindGtkPlus.cmake  FindGtkWin32.cmake  FindQt3.cmake  MacroExtractVersion.cmake  MacroStandardFindModule.cmake  MacroUninstallTarget.cmake  YCMDefaultDirs.cmake  YCMDeprecatedWarning.cmake
docs/: CMakeLists.txt  apply_qthelp_css_workaround.cmake  cmake-objects.inv  cmake.py  conf.py.in  fixup_qthelp_names.cmake
docs/static/: ycm.css
docs/templates/: layout.html
find-modules/: CMakeLists.txt  FindACE.cmake  FindAtlas.cmake  FindCFW2CANAPI.cmake  FindDRAGONFLYAPI.cmake  FindESDCANAPI.cmake  FindFFMPEG.cmake  FindFTDI.cmake  FindFreenect.cmake  FindFuse.cmake  FindGLFW3.cmake  FindGLM.cmake  FindGLUT.cmake  FindGSL.cmake  FindGooCanvas.cmake  FindGooCanvasMM.cmake  FindGtkDatabox.cmake  FindGtkDataboxMM.cmake  FindI2C.cmake  FindIPOPT.cmake  FindIPP.cmake  FindLibOVR.cmake  FindLibUsb1.cmake  FindLibdc1394.cmake  FindLibedit.cmake  FindLibusb1.cmake  FindLibv4l2.cmake  FindLibv4lconvert.cmake  FindNVIDIACg.cmake  FindODE.cmake  FindOpenCV.cmake  FindOpenGL.cmake  FindOpenNI.cmake  FindOpenNI2.cmake  FindPLXCANAPI.cmake  FindPortAudio.cmake  FindQt3.cmake  FindReadline.cmake  FindSQLite.cmake  FindStage.cmake  (+7 more)
gh-pages/: latest  version_switch.js
gh-pages/git-master/: .buildinfo  genindex.html  highlights.html  index.html  objects.inv  search.html  searchindex.js  todo.html
gh-pages/v0.1/: .buildinfo  genindex.html  highlights.html  index.html  objects.inv  search.html  searchindex.js  todo.html
gh-pages/v0.10/: .buildinfo  genindex.html  highlights.html  index.html  objects.inv  search.html  searchindex.js  todo.html
gh-pages/v0.11/: .buildinfo  genindex.html  highlights.html  index.html  objects.inv  search.html  searchindex.js  todo.html
gh-pages/v0.12/: .buildinfo  genindex.html  highlights.html  index.html  objects.inv  search.html  searchindex.js  todo.html
gh-pages/v0.13/: .buildinfo  genindex.html  highlights.html  index.html  objects.inv  search.html  searchindex.js  todo.html
help/: index.rst  todo.rst
internal-modules/: README  YCMInternal.cmake  YCMPack.cmake  YCMVersion.cmake
modules/: AddInstallRPATHSupport.cmake  AddRPATHSupport.cmake  AddRPATHSupportMacro.cmake  AddUninstallTarget.cmake  CMakeLists.txt  ExtractVersion.cmake  FindOrBuildPackage.cmake  GetAllCMakeProperties.cmake  GitInfo.cmake  IncludeUrl.cmake  InstallBasicPackageFiles.cmake  MacroExtractVersion.cmake  MacroStandardFindModule.cmake  MacroUninstallTarget.cmake  ReplaceImportedTargets.cmake  StandardFindModule.cmake  YCMDefaultDirs.cmake  YCMEPHelper.cmake  YCMInternal.cmake
modules/YCMEPHelper/: RepositoryInfo.txt.in  gitsafeclone.txt.in
style-modules/: CMakeLists.txt  StyleBITBUCKET.cmake  StyleGITHUB.cmake  StyleGITLAB_ROBOTOLOGY.cmake  StyleGNOME.cmake  StyleKDE.cmake  StyleLOCAL.cmake  StyleNONE.cmake  StyleSOURCEFORGE.cmake
tests/: CMakeLists.txt  EnforceConfig.cmake.in  test_clean.cmake.in
tests/RunCMake/: CMakeLists.txt  RunCMake.cmake
tests/RunCMake/AddInstallRPATHSupport/: AddInstallRPATHSupport_DEPENDS.cmake  AddInstallRPATHSupport_target_append_install_rpath.cmake  CMakeLists.txt  RunCMakeTest.cmake
tests/RunCMake/IncludeUrl/: CMakeLists.txt  IncludeUrl_DESTINATION.cmake  IncludeUrl_DOWNLOAD_ALWAYS-stderr.txt  IncludeUrl_DOWNLOAD_ALWAYS.cmake  IncludeUrl_DOWNLOAD_NORMAL.cmake  IncludeUrl_DOWNLOAD_ONCE.cmake  IncludeUrl_ERROR_MD5-stderr.txt  IncludeUrl_ERROR_MD5.cmake  IncludeUrl_ERROR_RETRIES_lessthanone-stderr.txt  IncludeUrl_ERROR_RETRIES_lessthanone.cmake  IncludeUrl_ERROR_RETRIES_notanumber-stderr.txt  IncludeUrl_ERROR_RETRIES_notanumber.cmake  IncludeUrl_ERROR_SHA1-stderr.txt  IncludeUrl_ERROR_SHA1.cmake  IncludeUrl_ERROR_script.cmake  IncludeUrl_ERROR_url-stderr.txt  IncludeUrl_ERROR_url.cmake  IncludeUrl_MD5.cmake  IncludeUrl_OPTIONAL_download_fail.cmake  IncludeUrl_OPTIONAL_sha1_fail.cmake  IncludeUrl_QUIET-stdout.txt  IncludeUrl_QUIET.cmake  IncludeUrl_RESULT_VARIABLE.cmake  IncludeUrl_RETRIES-stderr.txt  IncludeUrl_RETRIES-stdout.txt  IncludeUrl_RETRIES.cmake  IncludeUrl_SHA1.cmake  IncludeUrl_SHA1_unix_eol.cmake  IncludeUrl_SHA1_win_eol.cmake  IncludeUrl_STATUS.cmake  IncludeUrl_script.cmake  IncludeUrl_url.cmake  RunCMakeTest.cmake
tests/RunCMake/cmake-next/: CMakeLists.txt  RunCMakeTest.cmake  find_package_Doxygen.cmake  find_package_GLEW.cmake  find_package_Matlab.cmake  find_package_OpenGL.cmake  find_package_Python.cmake  find_package_Python2.cmake  find_package_Python3.cmake  find_package_SWIG.cmake  include_FeatureSummary.cmake  include_UseSWIG.cmake  include_WriteBasicConfigVersionFile.cmake  swig_add_library.cmake  swig_add_library.i
tests/YCMBootstrap/: CMakeLists.txt
tests/sha1sums/: check_sha1sums.sh
tools/: UseYCMFromSource.cmake  YCMBootstrap.cmake  YCMBootstrapFetch.cmake  gen-gh-pages.sh  update_sha1sums.sh
tools/pip/: README.md  pyproject.toml  setup.cfg  setup.py
(+1403 files in other folders)
